--- a/brazil.html
+++ b/brazil.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>RAM - Brazil</title>
+  <title>RAM - Brasil</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -49,7 +49,7 @@
       <div class="container position-relative">
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
-            <h2>Brazil</h2>
+            <h2>Brasil</h2>
             (Rio de Janeiro - Arraial do Cabo - Búzios)
             <p>April 3rd 2025 - April 26th 2025</p>
 
